--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ nav ul li a {
 /*---------------- Features Section --------------*/
 
 #features {
-  padding: 50px 0px;
+  padding: 100px 0px 0px;
 }
 
 .feature-row {
