--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
   margin-top: 20px;
 }
 
+#section-title h5 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #f67c92;
+  text-decoration: underline;
+}
+
 .header-text {
   max-width: 350px;
   margin-top: 90px;
@@ -197,13 +204,6 @@ nav ul li a {
 
 #features .square {
   margin: 20px 5px;
-}
-
-#feature-title h5 {
-  text-align: center;
-  margin-bottom: 40px;
-  color: #f67c92;
-  text-decoration: underline;
 }
 
 /*---------------Courses Section--------------*/
