--- a/style.css
+++ b/style.css
@@ -241,13 +241,14 @@ nav ul li a {
 /*--------------- offers Section ----------------*/
 
 #offers {
-  width: 100%;
-  height: 100vh;
+  padding: 100px 0px;
+}
+
+.offer-row{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-
 .offer-left-col {
   flex-basis: 50%;
 }
@@ -506,6 +507,10 @@ hr {
   .course-text {
     width: 100%;
   }
+
+  #offers {
+  padding: 50px 0px;
+}
 
   .offer-left-col,
   .offer-right-col {
