--- a/style.css
+++ b/style.css
@@ -241,6 +241,8 @@ nav ul li a {
 /*--------------- offers Section ----------------*/
 
 #offers {
+   width: 100%;
+  height: 100vh;
   padding: 100px 0px;
 }
 
